--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Gerardo Leal <gerard.leal91@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel --https"
+    "start": "parcel --https",
+    "build": "parcel build --dist-dir docs"
   },
   "dependencies": {
     "peerjs": "^1.4.6"
